Fix bugs on tablet

--- a/catalog/view/theme/default/stylesheet/d_ajax_filter/d_ajax_filter.scss
+++ b/catalog/view/theme/default/stylesheet/d_ajax_filter/d_ajax_filter.scss
@@ -2,14 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300&subset=cyrillic');
 
-@media only screen and (min-width: 1024px)
-{
-    .d_ajax_filter_popup_button
-    {
-        display: none;
-    }
-}
-
 .d_ajax_filter_popup_button
 {
     position: fixed;
